k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delta-neutral-deployment
  namespace: delta-neutral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delta-neutral
  template:
    metadata:
      labels:
        app: delta-neutral
    spec:
      containers:
      - name: delta-neutral-container
        readinessProbe:
        httpGet:
          path: /healthz
          port: 8000
        initialDelaySeconds: 5
        periodSeconds: 5
        image: ljheal/delta-neutral:latest
        ports:
        - containerPort: 8000
