k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delta-neutral-ingress
  namespace: delta-neutral
  annotations:
    cert-manager.io/issuer: delta-neutral-issuer
  labels:
    app: delta-neutral
spec:
  ingressClassName: traefik
  rules:
  - host: api.delta-neutral.louisheal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: delta-neutral-service
            port:
              number: 80

  tls:
  - hosts:
    - api.delta-neutral.louisheal.com
    secretName: tls-delta-neutral
